# tenetenance

./: .gitignore  Cargo.toml  LICENSE  backup.bincode  readme.md  todo.md
cli/src/backup/: mod.rs
cli/src/docker/: docker.rs  mod.rs
cli/src/json/: mod.rs
cli/src/logs/: logs.rs
cli/src/system_monitor/: memory.rs  mod.rs  storage.rs  temperature.rs  users.rs  utils.rs
log_test/test2/: testd.txt
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  utils.rs
src/api/: api.rs  mod.rs
src/backup/: backup.rs  metadata.rs  mod.rs
src/clean/: clean.rs  mod.rs
src/docker/: docker.rs
src/json/: json.rs
src/log/: log.rs  mod.rs
src/logs/: logs.rs  mod.rs
src/system_monitor/: cpu.rs  memory.rs  mod.rs  network.rs  process.rs  storage.rs  temperature.rs  users.rs  utils.rs  version.rs
