[package]
name = "tenetenance"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bollard = "0.19.4"
chrono = "0.4.42"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.40", features = ["full"] }
uzers = "0.12.1"
walkdir = "2.5.0"
reqwest = { version = "0.12.24", features = ["json", "tokio-runtime"] }